
    The Portuguese decree of 1911-05-25 took effect on 1912-01-01.
    This affects 1911 time stamps in Africa/Bissau, Africa/Luanda,
    Atlantic/Azores, and Atlantic/Madeira.  Also, Lisbon's pre-1912
    GMT offset was -0:36:45 (rounded from -0:36:44.68), not -0:36:32.
    (Thanks to Stephen Colebourne for pointing to the decree.)

    Asia/Dakha ended DST on 2009-12-31 at 24:00, not 23:59.

  Changes affecting distribution tarballs

    The files checktab.awk and zoneinfo2tdf.pl are now distributed in
    the tzdata tarball instead of the tzcode tarball, since they help
    maintain the data.  The NEWS file is now also distributed in the
    tzdata tarball, since it contains news for data too.  (Thanks to
    Alan Barrett for pointing this out.)  Also, the leapseconds.awk
    file is no longer distributed in the tzcode tarball, since it
    belongs in the tzdata tarball (where 2014f inadvertently also
    distributed it).

  Changes affecting documentation and commentary

    A new file CONTRIBUTING is distributed.  (Thanks to Tim Parenti
    for suggesting a CONTRIBUTING file.)

    tz-link.htm mentions Windows Runtime etc. (thanks to Matt Johnson)
    and HP-UX's tztab.

    Some broken URLs have been fixed in the commentary.  (Thanks to
    Lester Caine.)


Release 2014f - 2014-08-05 17:42:36 -0700

  Changes affecting future time stamps

    Russia most likely will subtract an hour from many of its time zones on
    2014-10-26 at 02:00 local time.  (Thanks to Alexander Krivenyshev.)
    The affected zones are Europe/Kaliningrad, Europe/Moscow,
    Europe/Simferopol, Europe/Volgograd, Asia/Yekaterinburg, Asia/Omsk,
    Asia/Novosibirsk, Asia/Krasnoyarsk, Asia/Irkutsk, Asia/Yakutsk,
    Asia/Vladivostok, Asia/Khandyga, Asia/Sakhalin, and Asia/Ust-Nera.
    Asia/Magadan will have two hours subtracted.  Asia/Novokuznetsk's time
    zone abbreviation is affected, but not its UTC offset.

  Changes affecting time zone abbreviations
