@@ -21,7 +21,7 @@
 # most of the era.  Because the zones are out of normal scope for the
 # database, less effort is put into maintaining this file.  Many of
 # the zones were formerly in other source files, but were removed or
-# replaced by links as their data entries were questionable and/or they
+# replaced by links as their data were questionable and/or they
 # differed from other zones only in pre-1970 time stamps.
 
 # Unless otherwise specified, the source for the data is the following,
@@ -44,27 +44,11 @@ Zone	Africa/Bamako	-0:32:00 -	LMT	1912
 			-1:00	-	WAT	1960 Jun 20
 			 0:00	-	GMT
 
-# Central African Republic
-Zone	Africa/Bangui	1:14:20	-	LMT	1912
-			1:00	-	WAT
-
 # Gambia
 Zone	Africa/Banjul	-1:06:36 -	LMT	1912
-			-1:06:36 -	BMT	1935 # Banjul Mean Time
+			-1:06:36 -	BMT	1935	# Banjul Mean Time
 			-1:00	-	WAT	1964
 			 0:00	-	GMT
-
-# Malawi
-Zone	Africa/Blantyre	2:20:00 -	LMT	1903 Mar
-			2:00	-	CAT
-
-# Republic of the Congo
-Zone Africa/Brazzaville	1:01:08 -	LMT	1912
-			1:00	-	WAT
-
-# Burundi
-Zone Africa/Bujumbura	1:57:28	-	LMT	1890
-			2:00	-	CAT
 
 # Guinea
 Zone	Africa/Conakry	-0:54:52 -	LMT	1912
@@ -77,16 +61,12 @@ Zone	Africa/Dakar	-1:09:44 -	LMT	1912
 			-1:00	-	WAT	1941 Jun
 			 0:00	-	GMT
 
-# Cameroon
-# Whitman says they switched to 1:00 in 1920; go with Shanks & Pottenger.
-Zone	Africa/Douala	0:38:48	-	LMT	1912
-			1:00	-	WAT
 # Sierra Leone
 # From Paul Eggert (2014-08-12):
 # The following table is from Shanks & Pottenger, but it can't be right.
 # Whitman gives Mar 31 - Aug 31 for 1931 on.
 # The International Hydrographic Bulletin, 1932-33, p 63 says that
-# Sierra Leone would advance its clocks by 20 minutes on 1933-10-01.
+# Sierra Leone would advance its clocks by 20 monutes on 1933-10-01.
 # Rule	NAME	FROM	TO	TYPE	IN	ON	AT	SAVE	LETTER/S
 Rule	SL	1935	1942	-	Jun	 1	0:00	0:40	SLST
 Rule	SL	1935	1942	-	Oct	 1	0:00	0	WAT
@@ -97,86 +77,14 @@ Zone	Africa/Freetown	-0:53:00 -	LMT	1882
 			-1:00	SL	%s	1957
 			 0:00	SL	%s
 
-# Botswana
-# From Paul Eggert (2013-02-21):
-# Milne says they were regulated by the Cape Town Signal in 1899;
-# assume they switched to 2:00 when Cape Town did.
-Zone	Africa/Gaborone	1:43:40 -	LMT	1885
-			1:30	-	SAST	1903 Mar
-			2:00	-	CAT	1943 Sep 19  2:00
-			2:00	1:00	CAST	1944 Mar 19  2:00
-			2:00	-	CAT
-
-# Zimbabwe
-Zone	Africa/Harare	2:04:12 -	LMT	1903 Mar
-			2:00	-	CAT
-
 # South Sudan
 Zone	Africa/Juba	2:06:24 -	LMT	1931
 			2:00	Sudan	CA%sT	2000 Jan 15 12:00
 			3:00	-	EAT
 
-# Rwanda
-Zone	Africa/Kigali	2:00:16 -	LMT	1935 Jun
-			2:00	-	CAT
-
-# Democratic Republic of the Congo (west)
-Zone Africa/Kinshasa	1:01:12 -	LMT	1897 Nov 9
-			1:00	-	WAT
-
-# Gabon
-Zone Africa/Libreville	0:37:48 -	LMT	1912
-			1:00	-	WAT
-
 # Togo
 Zone	Africa/Lome	0:04:52 -	LMT	1893
 			0:00	-	GMT
-
-# Angola
-#
-# Shanks gives 1911-05-26 for the transition to WAT,
-# evidently confusing the date of the Portuguese decree
-# http://dre.pt/pdf1sdip/1911/05/12500/23132313.pdf
-# with the date that it took effect, namely 1912-01-01.
-#
-Zone	Africa/Luanda	0:52:56	-	LMT	1892
-			0:52:04	-	AOT	1912 Jan  1 # Angola Time
-			1:00	-	WAT
-
-# Democratic Republic of the Congo (east)
-Zone Africa/Lubumbashi	1:49:52 -	LMT	1897 Nov 9
-			2:00	-	CAT
-
-# Zambia
-Zone	Africa/Lusaka	1:53:08 -	LMT	1903 Mar
-			2:00	-	CAT
-
-# Equatorial Guinea
-#
-# Although Shanks says that Malabo switched from UTC to UTC+1 on 1963-12-15,
-# a Google Books search says that London Calling, Issues 432-465 (1948), p 19,
-# says that Spanish Guinea was at GMT+1 back then.  The Shanks data entries
-# are most likely wrong, but we have nothing better; use them here for now.
-#
-Zone	Africa/Malabo	0:35:08 -	LMT	1912
-			0:00	-	GMT	1963 Dec 15
-			1:00	-	WAT
-
-# Lesotho
-Zone	Africa/Maseru	1:50:00 -	LMT	1903 Mar
-			2:00	-	SAST	1943 Sep 19  2:00
-			2:00	1:00	SAST	1944 Mar 19  2:00
-			2:00	-	SAST
-
-# Swaziland
-Zone	Africa/Mbabane	2:04:24 -	LMT	1903 Mar
-			2:00	-	SAST
-
-# Niger
-Zone	Africa/Niamey	 0:08:28 -	LMT	1912
-			-1:00	-	WAT	1934 Feb 26
-			 0:00	-	GMT	1960
-			 1:00	-	WAT
 
 # Mauritania
 Zone Africa/Nouakchott	-1:03:48 -	LMT	1912
@@ -188,16 +96,9 @@ Zone Africa/Nouakchott	-1:03:48 -	LMT	1912
 Zone Africa/Ouagadougou	-0:06:04 -	LMT	1912
 			 0:00	-	GMT
 
-# Benin
-# Whitman says they switched to 1:00 in 1946, not 1934;
-# go with Shanks & Pottenger.
-Zone Africa/Porto-Novo	0:10:28	-	LMT	1912 Jan  1
-			0:00	-	GMT	1934 Feb 26
-			1:00	-	WAT
-
-# São Tomé and Príncipe
+# S?o Tom? and Pr?ncipe
 Zone	Africa/Sao_Tome	 0:26:56 -	LMT	1884
-			-0:36:32 -	LMT	1912 # Lisbon Mean Time
+			-0:36:32 -	LMT	1912	# Lisbon Mean Time
 			 0:00	-	GMT
 
 # Mali (northern)
@@ -223,7 +124,7 @@ Zone America/Argentina/ComodRivadavia -4:30:00 - LMT	1894 Oct 31
 			-3:00	-	ART
 
 # Aruba
-Zone	America/Aruba	-4:40:24 -	LMT	1912 Feb 12 # Oranjestad
+Zone	America/Aruba	-4:40:24 -	LMT	1912 Feb 12	# Oranjestad
 			-4:30	-	ANT	1965 # Netherlands Antilles Time
 			-4:00	-	AST
 
@@ -247,11 +148,11 @@ Zone America/Ensenada	-7:46:28 -	LMT	1922 Jan  1  0:13:32
 			-8:00	Mexico	P%sT
 
 # Grenada
-Zone	America/Grenada	-4:07:00 -	LMT	1911 Jul # St George's
+Zone	America/Grenada	-4:07:00 -	LMT	1911 Jul	# St George's
 			-4:00	-	AST
 
 # Guadeloupe
-Zone America/Guadeloupe	-4:06:08 -	LMT	1911 Jun  8 # Pointe a Pitre
+Zone America/Guadeloupe	-4:06:08 -	LMT	1911 Jun  8	# Pointe a Pitre
 			-4:00	 -	AST
 
 # Montserrat
@@ -276,25 +177,25 @@ Zone America/Rosario	-4:02:40 -	LMT	1894 Nov
 			-3:00	-	ART
 
 # St Kitts-Nevis
-Zone America/St_Kitts	-4:10:52 -	LMT	1912 Mar  2 # Basseterre
+Zone America/St_Kitts	-4:10:52 -	LMT	1912 Mar  2	# Basseterre
 			-4:00	-	AST
 
 # St Lucia
-Zone America/St_Lucia	-4:04:00 -	LMT	1890 # Castries
-			-4:04:00 -	CMT	1912 # Castries Mean Time
+Zone America/St_Lucia	-4:04:00 -	LMT	1890		# Castries
+			-4:04:00 -	CMT	1912	    # Castries Mean Time
 			-4:00	-	AST
 
 # Virgin Is
-Zone America/St_Thomas	-4:19:44 -	LMT	1911 Jul # Charlotte Amalie
+Zone America/St_Thomas	-4:19:44 -	LMT	1911 Jul    # Charlotte Amalie
 			-4:00	-	AST
 
 # St Vincent and the Grenadines
-Zone America/St_Vincent	-4:04:56 -	LMT	1890 # Kingstown
-			-4:04:56 -	KMT	1912 # Kingstown Mean Time
+Zone America/St_Vincent	-4:04:56 -	LMT	1890		# Kingstown
+			-4:04:56 -	KMT	1912	   # Kingstown Mean Time
 			-4:00	-	AST
 
 # British Virgin Is
-Zone America/Tortola	-4:18:28 -	LMT	1911 Jul # Road Town
+Zone America/Tortola	-4:18:28 -	LMT	1911 Jul    # Road Town
 			-4:00	-	AST
 
 # McMurdo, Ross Island, since 1955-12
@@ -302,19 +203,15 @@ Zone Antarctica/McMurdo	0	-	zzz	1956
 			12:00	NZ	NZ%sT
 Link Antarctica/McMurdo Antarctica/South_Pole
 
-# India
-#
-# From Paul Eggert (2014-09-06):
-# The 1876 Report of the Secretary of the [US] Navy, p 305 says that Madras
-# civil time was 5:20:57.3.
-#
-# From Paul Eggert (2014-08-21):
-# In tomorrow's The Hindu, Nitya Menon reports that India had two civil time
-# zones starting in 1884, one in Bombay and one in Calcutta, and that railways
-# used a third time zone based on Madras time (80 deg. 18'30" E).  Also,
-# in 1881 Bombay briefly switched to Madras time, but switched back.  See:
-# http://www.thehindu.com/news/cities/chennai/madras-375-when-madras-clocked-the-time/article6339393.ece
-#Zone	  Asia/Chennai  [not enough info to complete]
+# China
+# Changbai Time ("Long-white Time", Long-white = Heilongjiang area)
+# Heilongjiang (except Mohe county), Jilin
+Zone	Asia/Harbin	8:26:44	-	LMT	1928 # or Haerbin
+			8:30	-	CHAT	1932 Mar # Changbai Time
+			8:00	-	CST	1940
+			9:00	-	CHAT	1966 May
+			8:30	-	CHAT	1980 May
+			8:00	PRC	C%sT
 
 # China
 # Long-shu Time (probably due to Long and Shu being two names of that area)
@@ -322,24 +219,14 @@ Link Antarctica/McMurdo Antarctica/South_Pole
 # most of Gansu; west Inner Mongolia; west Qinghai; and the Guangdong
 # counties Deqing, Enping, Kaiping, Luoding, Taishan, Xinxing,
 # Yangchun, Yangjiang, Yu'nan, and Yunfu.
-Zone	Asia/Chongqing	7:06:20	-	LMT	1928     # or Chungking
+Zone	Asia/Chongqing	7:06:20	-	LMT	1928 # or Chungking
 			7:00	-	LONT	1980 May # Long-shu Time
 			8:00	PRC	C%sT
 Link Asia/Chongqing Asia/Chungking
 
-# China
-# Changbai Time ("Long-white Time", Long-white = Heilongjiang area)
-# Heilongjiang (except Mohe county), Jilin
-Zone	Asia/Harbin	8:26:44	-	LMT	1928     # or Haerbin
-			8:30	-	CHAT	1932 Mar # Changbai Time
-			8:00	-	CST	1940
-			9:00	-	CHAT	1966 May
-			8:30	-	CHAT	1980 May
-			8:00	PRC	C%sT
-
 # far west China
-Zone	Asia/Kashgar	5:03:56	-	LMT	1928     # or Kashi or Kaxgar
-			5:30	-	KAST	1940     # Kashgar Time
+Zone	Asia/Kashgar	5:03:56	-	LMT	1928 # or Kashi or Kaxgar
+			5:30	-	KAST	1940	 # Kashgar Time
 			5:00	-	KAST	1980 May
 			8:00	PRC	C%sT
 
@@ -353,8 +240,8 @@ Zone	Asia/Tel_Aviv	2:19:04 -	LMT	1880
 Zone Atlantic/Jan_Mayen	-1:00	-	EGT
 
 # St Helena
-Zone Atlantic/St_Helena	-0:22:48 -	LMT	1890 # Jamestown
-			-0:22:48 -	JMT	1951 # Jamestown Mean Time
+Zone Atlantic/St_Helena	-0:22:48 -	LMT	1890		# Jamestown
+			-0:22:48 -	JMT	1951	# Jamestown Mean Time
 			 0:00	-	GMT
 
 # Northern Ireland
